# QQ_bot_AI

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  alembic.ini  bot.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
deploy/: nginx.example.conf  qq-private-ai-companion-bot.service
docs/: configuration.md  faq.md  installation.md  media-assets.md  memory-system.md  persona.md  proactive-message.md  qq-bot-platform.md  qq-official-api-matrix.md  webhook.md  websocket.md
migrations/: env.py
migrations/versions/: 0001_initial.py
persona/: default.md
persona/examples/: anime-character.md  concise-professional.md  emotional-companion.md  serious-assistant.md
scripts/: check_config.py  dev.sh  init_db.py  run.sh
src/: __init__.py  app.py  config.py  db.py  locks.py  logging_config.py  models.py  schemas.py
src/ai/: json_utils.py  openai_compatible_client.py  provider.py
src/prompts/: __init__.py  chat_prompt.py  emotion_prompt.py  memory_prompt.py  proactive_prompt.py
src/qq/: __init__.py  auth.py  client.py  errors.py  events.py  media.py  message_types.py  webhook.py  websocket_gateway.py
tests/: test_ai_provider.py  test_app_webhook_reply.py  test_asset_service.py  test_c2c_event.py  test_command_service.py  test_config.py  test_emotion_service.py  test_memory_service.py  test_message_payloads.py  test_persona_service.py  test_prompt_builder.py  test_qq_auth.py  test_qq_signature.py  test_rate_limit.py  test_text_utils.py  test_wakeup_windows.py
(+14 files in other folders)
