[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qq-private-ai-companion-bot"
version = "0.1.0"
description = "Official QQ C2C private chat AI companion bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ruchuan-CC" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "openai>=1.55",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "loguru>=0.7",
  "python-dotenv>=1.0",
  "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", ".pytest-tmp", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
